# scraper-vHezzian

./: .coderabbit.yaml  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  DEPLOYMENT.md  GitHub.md  README.md  SPEC.md  TESTING.md  architecture.MD  planning.MD  pyproject.toml  render.yaml
.claude/agents/: builder.md  planner.md  researcher.md  reviewer.md  security-auditor.md
.github/workflows/: ci.yml  daily-digest-users.yml  daily-digest.yml  daily-pipeline.yml
data/subscribers/: dee.json
deployment/: Caddyfile  Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/research/: reddit.md  substack-investing-sources.md  substack.md  youtube-transcripts.md
docs/superpowers/plans/: 2026-06-23-article-summaries.md  2026-06-23-community-ingestion.md  2026-06-24-digest-relevance.md  2026-06-24-multiuser-relevance.md  2026-06-24-render-neon-deploy.md  2026-06-25-per-user-email-delivery.md
docs/superpowers/specs/: 2026-06-23-article-summaries-design.md  2026-06-23-community-ingestion-design.md  2026-06-24-digest-relevance-design.md  2026-06-24-multiuser-relevance-design.md  2026-06-24-render-neon-deploy-design.md  2026-06-25-per-user-email-delivery-design.md  2026-06-25-user-sync-design.md
scrapeforge/: __init__.py  __main__.py  cli.py  exceptions.py
scrapeforge/api/: __init__.py  app.py  auth.py  deps.py  schemas.py
scrapeforge/api/routes/: __init__.py  articles.py  health.py  jobs.py  search.py
scrapeforge/config/: __init__.py  settings.py
scrapeforge/core/: __init__.py  circuit_breaker.py  engine.py  fingerprint_manager.py  models.py  proxy_rotator.py  rate_limiter.py  registry.py  stealth_bridge.py
scrapeforge/core/db/: __init__.py  migrations.py  models.py  repositories.py  session.py
scrapeforge/core/drivers/: __init__.py  base.py  curl_cffi_driver.py
scrapeforge/core/embeddings/: __init__.py  _vectors.py  base.py  exceptions.py  factory.py  gemini.py  openai_compatible.py  settings.py
scrapeforge/digest/: __init__.py  cli.py  matcher.py  models.py  postgres_source.py  relevance.py  render.py  samples.py  sender.py  service.py  settings.py  user_digest.py  user_source.py
scrapeforge/pipeline/: __init__.py  cli.py  embeddings_jobs.py  jobs.py  retention.py  sync_settings.py  user_sync.py
scrapeforge/scrapers/: __init__.py  base.py
scrapeforge/utils/: __init__.py  humanize.py  parsers.py  validators.py
scrapeforge/worker/: __init__.py  community_ingest_worker.py  messages.py  run_community_ingest.py  run_scheduler.py  run_scraper.py  run_summarize.py  run_transform.py  scheduler.py  scraper_worker.py  summarize_worker.py  transform_worker.py
tests/: conftest.py  test_api_articles.py  test_api_health.py  test_api_jobs.py  test_base_scraper.py  test_circuit_breaker.py  test_cli.py  test_community_ingest_e2e.py  test_community_ingest_worker.py  test_daily_digest_users_workflow.py  test_daily_pipeline_workflow.py  test_db_models.py  test_deliver_all.py  test_digest.py  test_digest_models.py  test_digest_postgres_e2e.py  test_digest_postgres_source.py  test_digest_relevance.py  test_digest_render.py  test_digest_settings.py  test_digest_user_cli.py  test_digest_user_settings.py  test_drivers.py  test_embed_batched.py  test_embedder_factory.py  test_embedder_gemini.py  test_embedder_openai_compatible.py  test_embedder_vectors.py  test_embeddings_jobs.py  test_engine.py  test_engine_ssl.py  test_exceptions.py  test_fingerprint.py  test_humanize.py  test_llm_base.py  test_llm_settings.py  test_messages.py  test_minio_store.py  test_models.py  test_multiuser_models.py  (+51 more)
tests/integration/: test_pipeline_e2e.py  test_reddit_live.py  test_substack_live.py  test_summarize_live.py  test_vertical_slice.py
(+32 files in other folders)
