[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapeforge"
version = "0.1.0"
description = "Multi-bucket anti-detection scraper with a serving API (ingestion + serving planes)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Nayrbnat" }]

# --- Core runtime dependencies (declared UP FRONT per the seam rule in CLAUDE.md) ---
# pyproject.toml is the ONE sanctioned shared file; new deps go through the lead.
dependencies = [
    # Drivers / anti-detection (ingestion plane)
    "curl_cffi>=0.7",
    "primp>=0.6",
    "patchright>=1.45",
    "nodriver>=0.38",
    # Parsing
    "selectolax>=0.3",
    "lxml>=5.2",
    # Config / CLI / logging
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "loguru>=0.7",
    # Crypto / fs
    "cryptography>=42.0",
    "filelock>=3.14",
    "aiofiles>=23.2",
    # Serving plane: API + datastore + queue
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "arq>=0.26",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "httpx>=0.27",            # respx + FastAPI TestClient transport
    "freezegun>=1.5",         # fake clock for RateLimiter / TTL tests
    "pytest-postgresql>=6.0", # ephemeral Postgres for db-touching unit tests
    "psycopg[binary]>=3.1",   # pytest-postgresql's driver; [binary] bundles libpq (no system lib needed)
]

[project.scripts]
scrapeforge = "scrapeforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["scrapeforge"]

# --------------------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"              # async tests need no explicit marker
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: hits live sites/services; SKIPPED in CI, run manually with creds/proxies",
    "db: requires a (ephemeral) Postgres instance",
]

# --------------------------------------------------------------------------------------
# Coverage  (gate enforced in CI: --cov-fail-under=80 over non-integration tests)
# --------------------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["scrapeforge"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "scrapeforge/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",                  # ellipsis-bodied stubs in specs/protocols
]

# --------------------------------------------------------------------------------------
# Ruff (lint + format)
# --------------------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]  # allow `assert` in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]   # test files may use fixtures/patterns linters dislike

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]
